# docker-practice

./: Dockerfile  README.md  pyproject.toml
docker_practice/app/: app.py
